gitops/cluster/runtime/base/argocd/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels: 
    openshift.io/cluster-monitoring: "true"
