gitops/cluster/runtime/base/argocd/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: argocd
spec:
  host: argocd.apps.okd.example.com
  to:
    kind: Service
    name: argocd-server
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: argocd-grpc
spec:
  host: grpc.apps.okd.example.com
  to:
    kind: Service
    name: argocd-server
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
